--- a/lib/views/layout.jade
+++ b/lib/views/layout.jade
@@ -2,6 +2,10 @@ doctype 5
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/bootstrap.css')
+  link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
+  
+script('javacsripts/jquery.min.js')
+script('javacsripts/bootstrap.js')
