--- a/lib/views/index.jade
+++ b/lib/views/index.jade
@@ -1,7 +1,15 @@
 extends layout
 
 block content
-  h1 Brisk
-  p What's YOUR risk for breast cancer?
-  p Know quicker. Be safer. Get Bris.kr
-  img(src='/images/bknow.png')
+  div.container
+    div.content
+      div.page-header
+        h1 #{title} 
+          small text
+      div.row
+        div.span10
+          h2 Main content
+        div.span4
+          h3 Secondary content
+ 
+    
