--- a/lib/views/index.jade
+++ b/lib/views/index.jade
@@ -1,15 +1,16 @@
 extends layout
 
 block content
-  div.container
-    div.content
-      div.page-header
-        h1 #{title} 
-          small text
-      div.row
-        div.span10
-          h2 Main content
-        div.span4
-          h3 Secondary content
+  .starter-template
+    h1 
+      
+    p.lead
+      | What's YOUR risk for breast cancer?
+      | Know quicker. Be safer. Get Bris.kr
+  //
+         /.container
+  //
+         Bootstrap core JavaScript
+  
  
     
