--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,20 @@
 body {
   padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font: 14px Helvetica, Arial, sans-serif;
 }
 
-a {
-  color: #00B7FF;
+h1, h2, h3, h4, h5 {
+  font-family: 'Bitter', serif;
+}
+
+a.navbar-brand {
+  width: 110px;
+  position: relative;
+}
+
+a.navbar-brand img {
+  position: absolute;
+  top: 10px;
+  left: 0;
+  width: 100px;
 }
