-added form page /form

--- a/lib/views/layout.jade
+++ b/lib/views/layout.jade
@@ -16,9 +16,11 @@ html
             .collapse.navbar-collapse
                 ul.nav.navbar-nav
                     li.active
-                        a(href='#') Home
+                        a(href='/') Home
                     li
-                        a(href='#about') About
+                        a(href='/about') About
+                    li
+                        a(href='/form') Form
                     li
                         a(href='#contact') Contact
 //
@@ -30,8 +32,8 @@ html
             p.lead
               | What's YOUR risk for breast cancer?
               | Know quicker. Be safer. Get Bris.kr
-//
-       /.container
+      block content
+    /.container
 //
        Bootstrap core JavaScript
   
