--- a/lib/views/about.jade
+++ b/lib/views/about.jade
@@ -7,13 +7,16 @@ block content
         div(class="col-lg-12 text-center")
           h2 What is Geknow?
           hr
-            | Communicating Whole Exome Sequencing (WES) possibilities to the every day person
+          
+        div(class="col-lg-12")
+          p Communicating Whole Exome Sequencing (WES) possibilities to the every day person
           p Learn more
           ul 
             li
               a(href='https://github.com/healthhack-melb/wiki/wiki/Geknow') Team Wiki
             li
               a(href='https://github.com/rkstedman/healthhack') Github
+      
       div(class="col-lg-12 text-center")
         h2 When was Geknow built?
         hr
