--- a/lib/views/about.jade
+++ b/lib/views/about.jade
@@ -9,7 +9,8 @@ block content
           hr
           
         div(class="col-lg-12")
-          p Communicating Whole Exome Sequencing (WES) possibilities to the every day person
+          p GeKnow explains the possible results of genetic testing. This discussion will take about 45 minutes with your genetic specialist (aka. geneticist). Your risks are influenced by a number of factors including your gender, ethnicity, age and family history.
+          p A full whole exome sequencing (WES) may show a genetic component to your disease, but it is possible that no result will be found. Because this test examines the full exome, it is also possible that predispositions to other diseases may also be found.
           p Learn more
           ul 
             li
@@ -18,7 +19,7 @@ block content
               a(href='https://github.com/rkstedman/healthhack') Github
       
       div(class="col-lg-12 text-center")
-        h2 When was Geknow built?
+        h2 Why/how was Geknow built?
         hr
       div(class="col-lg-12")
         p Geknow was built as part of 
@@ -31,8 +32,52 @@ block content
         div(class="col-lg-12 text-center")
           h2 Who built Geknow?
           hr
+      .row
         div(class="col-lg-4 col-md-4 col-sm-6")
-          img(class="img-responsive img-home-portfolio",src="http://placehold.it/700x450")
+          img(class="img-responsive img-home-portfolio",src="images/alison.jpg",width='100px',height='100px')
         div(class="col-lg-8 col-md-8 col-sm-6")
-          h3 Alison
+          h3 Alison Trainer
+          p Consultant geneticist, ask her about genomes, xomes and gnomes. Also hip hop.
+      .row  
+        div(class="col-lg-4 col-md-4 col-sm-6")
+          img(class="img-responsive img-home-portfolio",src="images/anna.jpg",width='100px',height='100px')
+        div(class="col-lg-8 col-md-8 col-sm-6")
+          h3 Anna Lee Anda
+          p Empathises with users, always follows KISS and is a master hula hooper.
+      .row
+        div(class="col-lg-4 col-md-4 col-sm-6")
+          img(class="img-responsive img-home-portfolio",src="images/yin.jpg",width='100px',height='100px')
+        div(class="col-lg-8 col-md-8 col-sm-6")
+          h3 Yin Shen
           p this is my bio
+      .row
+        div(class="col-lg-4 col-md-4 col-sm-6")
+          img(class="img-responsive img-home-portfolio",src="images/rachael.jpg",width='100px',height='100px')
+        div(class="col-lg-8 col-md-8 col-sm-6")
+          h3 Rachael Stedman
+          p A recent import from the US, she’s crazy about node.js and all things healthy!
+      .row
+        div(class="col-lg-4 col-md-4 col-sm-6")
+          img(class="img-responsive img-home-portfolio",src="images/lucy.jpg",width='100px',height='100px')
+        div(class="col-lg-8 col-md-8 col-sm-6")
+          h3 Lucy Nie
+          p Business intelligence developer who likes to run; she is all about data even when doing a half marathon
+      .row
+        div(class="col-lg-4 col-md-4 col-sm-6")
+          img(class="img-responsive img-home-portfolio",src="images/kathy.jpg",width='100px',height='100px')
+        div(class="col-lg-8 col-md-8 col-sm-6")
+          h3 Kathy Reid
+          p Knits, codes, programs and builds arduinos, gives talks, and uses linux.  A developer, analyst, communications and making people happy.
+      .row
+        div(class="col-lg-4 col-md-4 col-sm-6")
+          img(class="img-responsive img-home-portfolio",src="images/jacinta.jpg",width='100px',height='100px')
+        div(class="col-lg-8 col-md-8 col-sm-6")
+          h3 Jacinta Richardson
+          p Wordsmith, developer, coder. In her spare time she bakes, quilts and runs all the things.
+      .row
+        div(class="col-lg-4 col-md-4 col-sm-6")
+          img(class="img-responsive img-home-portfolio",src="images/andrew.jpg",width='100px',height='100px')
+        div(class="col-lg-8 col-md-8 col-sm-6")
+          h3 Andrew Yap
+          p a generally sleepy doctor who is interested in entrepreneurship. He likes to carry everything but the kitchen sink with him
+          
