--- a/lib/views/layout.jade
+++ b/lib/views/layout.jade
@@ -14,7 +14,7 @@ html
             span.icon-bar
             span.icon-bar
           a.navbar-brand(href='/')
-            img(src='/images/geknow.png')
+            img(src='/images/geknow_logo.png')
         .collapse.navbar-collapse
           ul.nav.navbar-nav
             li(class="#{page === 'home' ? 'active' : ''}")
