--- a/lib/views/layout.jade
+++ b/lib/views/layout.jade
@@ -16,7 +16,7 @@ html
           a.navbar-brand(href='/')
             img(src='/images/geknow_logo.png')
         .collapse.navbar-collapse
-          ul.nav.navbar-nav
+          ul.nav.navbar-nav.navbar-right
             li(class="#{page === 'home' ? 'active' : ''}")
                 a(href='/') Home
             li(class="#{page === 'about' ? 'active' : ''}")
