--- a/lib/views/layout.jade
+++ b/lib/views/layout.jade
@@ -24,5 +24,7 @@ html
               
     block content
   
-script('javacsripts/jquery.min.js')
-script('javacsripts/bootstrap.js')
+script(src='/javascripts/jquery.min.js')
+script(src='/javascripts/jquery.min.map')
+script(src='/javascripts/bootstrap.js')
+script(src='/javascripts/angular.js')
