--- a/lib/views/patients/patientList.jade
+++ b/lib/views/patients/patientList.jade
@@ -1,13 +1,19 @@
 extends ../layout
 
 block content
-  .row
-    .large-12.columns
-      .row
-        - if (typeof(patients) !== "undefined")
-          each patient in patients           
-            .large-3.small-6.columns
-              a(href="/patients/#{patient._id}")
-              .panel.patient-label
-                a(href="/patients/#{patient._id}") #{patient.firstName}
-              
+  .container(ng-app='patientList', ng-controller='PatientListCtrl')
+    table.table
+      tr
+        th UID
+        th First Name
+        th Last Name
+        th Pre-consult Appointment
+        th Post-consult Appointment
+      tr(ng-repeat='p in patientData')
+        td {{ p._id }}
+        td {{ p.firstName }}
+        td {{ p.lastName }}
+        td {{ p.appointments[0].time | date:'medium' }}
+        td {{ p.appointments[1].time | date:'medium' }}
+        
+  script(src='/javascripts/patientList/patientListCtrl.js')
