--- a/lib/views/layout.jade
+++ b/lib/views/layout.jade
@@ -18,9 +18,9 @@ html
             img(src='/images/geknow_logo.png')
         .collapse.navbar-collapse
           .col-sm-3.col-md-3.pull-right
-            form.navbar-form(role="search")
+            form.navbar-form(id="search")
               .input-group.input-group-sm
-                input.form-control(type="text",placeholder="search patients",name="srch-term",id="srch-term")
+                input.form-control(type="text",placeholder="search patients",name="srchTerm",id="srchTerm")
                 .input-group-btn
                   button.btn.btn-default(type="submit")
                     i.glyphicon.glyphicon-search
