-starting profile view

--- a/lib/views/patients/patientList.jade
+++ b/lib/views/patients/patientList.jade
@@ -2,7 +2,7 @@ extends ../layout
 
 block content
   .container(ng-app='patientList', ng-controller='PatientListCtrl')
-    table.table
+    table.table.table-condensed.table-hover
       tr
         th UID
         th First Name
