--- a/lib/views/patient-summary-initial-visit.jade
+++ b/lib/views/patient-summary-initial-visit.jade
@@ -25,7 +25,7 @@ block content
       tr
         td
           p
-            b Actionable disease causing variations
+            b Medically actionable disease causing variations
           p  changes in genes known to cause diseases that are treatable (for
           example breast cancer).
       
@@ -34,7 +34,7 @@ block content
       tr
         td 
           p
-            b Unactionable disease causing variations
+            b Medically unactionable disease causing variations
           p changes in genes known to cause diseases that are not yet
           treatable (for example Huntington's disease).
 
@@ -53,7 +53,7 @@ block content
         tr
           td
             p
-              b Reproductive variations 
+              b Reproductive variations (autosomal recessive carrier status)
             p changes in genes known to increase the risk of disease in
             offspring when your partner also has a change in the same gene
             (for example Cystic Fibrosis).
