Added table classes, turned variables into actual variables

--- a/lib/views/patient-entry-1.jade
+++ b/lib/views/patient-entry-1.jade
@@ -6,6 +6,12 @@ block content
     form(role='form')
       div.row
         div.form-group.col-md-6
+          label.control-lable Primary diagnosis 
+            div.textarea
+               label
+                  textarea(name='diagnosis')
+      div.row
+        div.form-group.col-md-6
           label.control-label Sex
             div.radio
               label
