--- a/lib/views/patients/patientView.jade
+++ b/lib/views/patients/patientView.jade
@@ -1,11 +1,12 @@
-extends ../layout
-
-block content
-  .container(ng-app='patientView', ng-controller='PatientViewCtrl')
-    form(role='form')
-      label(for='sex') | Sex
-      input(type='checkbox', id='sex')
-      	options
-
-        
-  script(src='/javascripts/patientView/patientViewCtrl.js')
+.container
+  .row
+    .col-lg-12
+      h2 Patient View
+      .panel-group#accordion
+        .panel.panel-default
+          .panel-heading
+            h4.panel-title
+              a.accordion-toggle(data-toggle="collapse",data-parent="#accordion",href="#collapseOne")
+                Consent Form
+          #collapseOne(class="panel-collapse collapse in")
+              .panel-body Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
