--- a/lib/views/patients/patientView.jade
+++ b/lib/views/patients/patientView.jade
@@ -6,7 +6,12 @@
         .panel.panel-default
           .panel-heading
             h4.panel-title
-              a.accordion-toggle(data-toggle="collapse",data-parent="#accordion",href="#collapseOne")
-                Consent Form
+              a.accordion-toggle(data-toggle="collapse",data-parent="#accordion",href="#collapseOne") Welcome
           #collapseOne(class="panel-collapse collapse in")
-              .panel-body Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+              .panel-body
+                p GeKnow attempts to explain the possible results of genetic testing. Your risks are influenced by a number of factors including your gender, ethnicity, age and family history.
+                p A Whole Exome Sequencing (WES) may show a genetic component to your disease but it is also possible that your genes are not at fault.  Because this test sequences your entire genome, it is also possible that other diseases or predispositions to other diseases may also be found.
+                p All data submitted to this system will be kept strictly confidential.
+                form(role='form')
+                  input(type='checkbox',name='agree') I understand.
+            
