-committing about page

--- a/lib/views/about.jade
+++ b/lib/views/about.jade
@@ -17,7 +17,15 @@ block content
               a(href='https://github.com/healthhack-melb/wiki/wiki/Geknow') Team Wiki
             li
               a(href='https://github.com/rkstedman/healthhack') Github
-      
+
+      div(class="col-lg-12 text-center")
+          h2 Minimal Viable Product
+          hr
+        div(class="col-lg-12")
+          p GeKnow will provide a clinical education tool for  geneticists to facilitate discussion with patients about whole exome sequencing as a clinical test for identifying underlying disease causing mutations.
+
+          p It includes prior probabilities of both identifying phenotype specific variations as well as incidental findings based on ethnicity including age specific reproductive options.
+
       div(class="col-lg-12 text-center")
         h2 Why/how was Geknow built?
         hr
