-added if statement

--- a/lib/views/patient-summary-initial-visit.jade
+++ b/lib/views/patient-summary-initial-visit.jade
@@ -54,13 +54,13 @@ block content
           #{ patient.predisposition_risk }
         td
           #{ patient.predisposition_choice }
-      - if patient.age < 50
-        tr
-          td
-            p
-              b Reproductive variations (autosomal recessive carrier status)
-            p changes in genes known to increase the risk of disease in offspring when your partner also has a change in the same gene (for example Cystic Fibrosis).
-          td
-            #{ patient.reproductive_risk }
-          td
-            #{ patient.reproductive_choice }
+      if patient.profile.age < 50
+          tr
+            td
+              p
+                b Reproductive variations (autosomal recessive carrier status)
+              p changes in genes known to increase the risk of disease in offspring when your partner also has a change in the same gene (for example Cystic Fibrosis).
+            td
+              #{ patient.reproductive_risk }
+            td
+              #{ patient.reproductive_choice }
